<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/gpa_calculator"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/grade_1"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:text="@string/grade_2"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/grade_3"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:text="@string/grade_4"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:text="@string/grade_5"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="345dp"
        android:text="@string/gpa"
        android:textSize="14sp" />

        <EditText
            android:id="@+id/e1"
            android:labelFor="@+id/e1"
            android:layout_width="108dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/e2"
            android:layout_width="108dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="126dp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:labelFor="@id/e2"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/e3"
            android:layout_width="108dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:labelFor="@id/e3"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/e4"
            android:layout_width="108dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="232dp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:labelFor="@id/e4"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/e5"
            android:layout_width="108dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="290dp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:labelFor="@id/e5"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/t"
            android:layout_width="108dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="347dp"
            android:textSize="12sp" />

    <Button
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:text="@string/compute_gpa"
        android:textSize="14sp" />
    </RelativeLayout>
</ScrollView>